[package]
name = "functions_loop"
version = "0.1.1"
authors = ["Anum Essani <essanianum@gmail.com>"]
edition = "2018"
description = "loop ka function"
license = "MIT"
repository ="https://github.com/AnumEssani/loop_functions"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
